# sentiment-analysis-tool-using-nlp

./: .gitignore  .replit  app.py  how to run.md  pyproject.toml  replit.md
attached_assets/: Pasted-Recommendation-System-Project-Ideas-Movie-Book-Recommendation-with-Sentiment-Fusion-Use-IMDB-Goodr-1759297138011_1759297138011.txt
templates/: index.html
